Java 17 and code cleanup